# tpa-arvore

./: CMakeLists.txt  DadosBancoPulini.txt  DadosBancoPulini10k.txt  DadosBancoPulini50k.txt
src/: arvore.c  arvoreAberta.c  arvoreFechada.c  cliente.c  hash.c  main.c  menu.c
src/headers/: arvore.h  arvoreAberta.h  arvoreFechada.h  cliente.h  hash.h  hashFechado.h  main.h  menu.h
